--- a/src/components/LinksList/LinksList.module.scss
+++ b/src/components/LinksList/LinksList.module.scss
@@ -8,10 +8,14 @@ $gap: 24px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: $gap;
+
+        @media screen and (max-width: 1280px) {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &--item {
-        // min-width: calc((100% - $gap) / 2);
         box-sizing: border-box;
     }
 }
